# ftdi-serial-flasher

./: CMakeLists.txt  README.md  main.c
lib/: libftdi1.so.2.4.0
